--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- vartotojo laukelių validacija (input form validation) -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
+
 
     </dependencies>
 
