--- a/pom.xml
+++ b/pom.xml
@@ -73,16 +73,31 @@
             <version>2.3.2</version>
         </dependency>
 
+        <!-- JSP JSTL (java server pages tag library) anotacijoms, pvz.: foreach, URL, param -->
 
-    </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+       <dependency>
+           <groupId>jakarta.servlet.jsp.jstl</groupId>
+           <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+           <version>3.0.0</version>
+       </dependency>
+
+
+       <dependency>
+           <groupId>org.glassfish.web</groupId>
+           <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+           <version>3.0.1</version>
+       </dependency>
+
+   </dependencies>
+
+   <build>
+       <plugins>
+           <plugin>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-maven-plugin</artifactId>
+           </plugin>
+       </plugins>
+   </build>
 
 </project>
